replace all mentions of old name

--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}{% endblock %} - cheeseRox</title>
+	<title>{% block title %}{% endblock %} - squareBracket</title>
 	{% block head %}{% endblock %}
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
 	<link rel="manifest" href="/assets/icons/site.webmanifest">
 	<link rel="shortcut icon" href="/assets/icons/favicon.ico">
-	<meta name="apple-mobile-web-app-title" content="cheeseRox">
-	<meta name="application-name" content="cheeseRox">
+	<meta name="apple-mobile-web-app-title" content="squareBracket">
+	<meta name="application-name" content="squareBracket">
 	<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa81d">
 	<meta name="msapplication-TileColor" content="#ffa81d">
@@ -84,7 +84,7 @@
 		<div class="footer">
 	{% endif %}
 			<img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
-			<p><b>{{ __("By the cheeseRox contributors") }}</b> · 2020-{{ 'now' | date('Y') }} 
+			<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} 
 			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
 			<h5>{{ __("Running on commit: ") }} {{ git_commit() }}<br></h5>
