--- a/templates/sbnext-finalium/stats.twig
+++ b/templates/sbnext-finalium/stats.twig
@@ -6,9 +6,9 @@
 	<div class="card">
 		<div class="card-body">
 		<div style="padding:5px;">
-		<h2>About cheeseRox</h2>
+		<h2>About squareBracket</h2>
 		<p>Yes, they were originally in the footer but I moved them here since checking the number of everything when
-		a user loads something on cheeseRox is dumb.</p>
+		a user loads something on squareBracket is dumb.</p>
 		</div>
 		<div class="grid">
 			<div class="col-md-3"><div class="statbox">
