--- a/templates/sbnext-finalium/components/nostalgia/_header.twig
+++ b/templates/sbnext-finalium/components/nostalgia/_header.twig
@@ -1,7 +1,7 @@
 	<div id="masthead-container">
 <table class="header1" width="100%" bgcolor="#0049C7" cellpadding="0" style="padding: 5px 0px 0px 0px;" cellspacing="0" border="0">
 	<tbody><tr valign="top">
-		<td width="130" rowspan="2" style="padding: 0px 5px 5px 5px;vertical-align: middle;"><a href="index.php"><img id="logo" src="/assets/logo-wordmark-dark.png" alt="cheeseRox" border="0"></a></td>
+		<td width="130" rowspan="2" style="padding: 0px 5px 5px 5px;vertical-align: middle;"><a href="index.php"><img id="logo" src="/assets/logo-wordmark-dark.png" alt="squareBracket" border="0"></a></td>
 		<td valign="top" style="vertical-align: middle;">
 		<table align="right" width="100%" cellpadding="0" cellspacing="0" border="0">
 			<tbody><tr valign="top">
