--- a/templates/sbnext-finalium/partnership.twig
+++ b/templates/sbnext-finalium/partnership.twig
@@ -10,7 +10,7 @@
 					<img src="/assets/partnership.png" class="img-fluid">
 				</div>
 				<div class="col-md-8">
-					<h1>cheeseRox Partnership</h1>
+					<h1>squareBracket Partnership</h1>
 					<p class="partnership-intro">You've got shit and an actual fanbase? Okay, then uhhhhh why not apply for partnership?
 					You know I can't write proper shit, i'm sorry for this placeholder text.</p>
 					The form will be added when I give a fuck.
