--- a/templates/sbnext-finalium/browse.twig
+++ b/templates/sbnext-finalium/browse.twig
@@ -8,10 +8,10 @@
          <div class="bg-dark text-light card card-body" style="padding:1px 15px;">
             <div class="grid">
 				<p>
-					<a>Videos</a> &bull;
-					<a>Music</a> &bull;
-					<a>Images</a> &bull;
-					<a>Text</a>
+					<a>{{ __("Videos") }}</a> &bull;
+					<a>{{ __("Music") }}</a> &bull;
+					<a>{{ __("Images") }}</a> &bull;
+					<a>{{ __("Text") }}</a>
 				</p>
             </div>
          </div>
