--- a/templates/sbnext-finalium/components/_header.twig
+++ b/templates/sbnext-finalium/components/_header.twig
@@ -31,7 +31,7 @@
 				</div>
 				<form id="masthead-search" action="/search.php">
 					<button id="search-btn" class="button button-secondary">
-					<span>Search</span>
+					<span>{{ __("Search") }}</span>
 					</button>
 					<div id="masthead-search-terms">
 						<label><input type="text" name="query" placeholder="{{ __("Search...") }}"></label>
