--- a/templates/sbnext-finalium/settings.twig
+++ b/templates/sbnext-finalium/settings.twig
@@ -15,17 +15,17 @@
 <div class="col-md-2">
 	<div class="settings-tab current">
 		<a href="/settings.php">
-			Overview
+			{{ __("Overview") }}
 		</a>
 	</div>
 	<div class="settings-tab">
 		<a href="/settings.php">
-			Credentials
+			{{ __("Credentials") }}
 		</a>
 	</div>
 	<div class="settings-tab">
 		<a href="/my_profile.php">
-			Profile setup
+			{{ __("Profile setup") }}
 		</a>
 	</div>
 </div>
