--- a/templates/sbnext-finalium/studio/index.twig
+++ b/templates/sbnext-finalium/studio/index.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{ __("Home") }}{% endblock %}
 
 	{% block content %}
 	  <div>
