--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -138,7 +138,7 @@
 						</div>
 						<div class="col-md-6">
 						<h2><a href="watch.php?v={{ video.video_id }}">{{ video.title }}</a></h2>
-						<p style="margin:0;">From: <a href="/user.php?name={{ video.u_name }}" title="{{ video.u_name }}">{{ video.u_name }}</a></p>
+						<p style="margin:0;">{{ __("From:") }} <a href="/user.php?name={{ video.u_name }}" title="{{ video.u_name }}">{{ video.u_name }}</a></p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
