--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -23,10 +23,10 @@
          <div class="bg-dark text-light card card-body" style="border-bottom:none;border-color:black;">
             <div class="grid">
                <div class="col-md-4">
-                  <a class="button button-dark" href="/studio/edit.php?v={{video.video_id}}">Edit</a>
+                  <a class="button button-dark" href="/studio/edit.php?v={{video.video_id}}">{{ __("Edit") }}</a>
                </div>
                <div class="col-md-8 right">
-                  <a class="button button-dark" href="/studio/">Video Manager</a>
+                  <a class="button button-dark" href="/studio/">{{ __("Video Manager") }}</a>
                </div>
             </div>
          </div>
