--- a/templates/sbnext-finalium/studio/edit.twig
+++ b/templates/sbnext-finalium/studio/edit.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Edit video{% endblock %}
+{% block title %}{{ __("Edit video") }}{% endblock %}
 
 	{% block content %}
 	<div class="grid">
@@ -8,12 +8,12 @@
 	<img class="img-fluid " src="{{ video_thumbnail(video.video_id) }}">
 	<div class="settings-tab current">
 		<a href="/studio/edit.php?v={{ video.video_id }}">
-			Details
+			{{ __("Details") }}
 		</a>
 	</div>
 	<div class="settings-tab">
 		<a href="/studio/comments.php?v={{ video.video_id }}">
-			Comments
+			{{ __("Comments") }}
 		</a>
 	</div>
 	</div>
