--- a/templates/sbnext-finalium/view.twig
+++ b/templates/sbnext-finalium/view.twig
@@ -12,7 +12,7 @@
                   <img src="{{ profile_image(image.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
                   <a href="user.php?name={{ image.u_name }}"><b style="height: 20px;display: inline-block;">{{ image.u_name }}</b></a>
                   <br>
-                  {% if userdata.id == image.author %}<a class="button button-secondary button-small">Channel settings</a>{% else %}
+                  {% if userdata.id == image.author %}<a class="button button-secondary button-small">{{ __("Channel settings") }}</a>{% else %}
                   <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == image.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
                   <div class="subscribe-count">{{ subCount }}</div>
                   {% endif %}
