make certain things dark in dark theme

--- a/assets/scss/darkmode.scss
+++ b/assets/scss/darkmode.scss
@@ -286,3 +286,16 @@ textarea, input[type=text], input[type=password] {
 		}
 	}
 }
+
+.statbox {
+  text-align: center;
+  font-size: 20px;
+  border: 1px solid #333;
+  padding: 1em;
+  margin: .1em;
+  background-color: #212121;
+}
+
+#guide {
+  background: #212121;
+}
