refactor: remove old unfinished features that won't be needed

--- a/templates/sbnext-finalium/components/_header.twig
+++ b/templates/sbnext-finalium/components/_header.twig
@@ -26,7 +26,7 @@
 			<div id="masthead-content">
 				<div id="masthead-upload-button-group" style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 5px;">
 					<a href="/browse.php">{{ __("Browse") }}</a>
-					<a href="/upload_start.php">{{ __("Upload") }}</a>
+					<a href="/upload.php">{{ __("Upload") }}</a>
 					<a href="/forum/">{{ __("Forums") }}</a>
 				</div>
 				<form id="masthead-search" action="/search.php">
