--- a/templates/sbnext-finalium/components/player.twig
+++ b/templates/sbnext-finalium/components/player.twig
@@ -82,6 +82,14 @@
 				  const ui = video['ui'];
 				  const controls = ui.getControls();
 				  const player = controls.getPlayer();
+				  
+				  player.configure({
+					manifest: {
+						dash: {
+							ignoreEmptyAdaptationSet: true
+						}
+					}
+				  });
 
 				  // Attach player and ui to the window to make it easy to access in the JS console.
 				  window.player = player;
