--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -79,7 +79,7 @@
 			<p><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} 
 			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
-			<h5>{{ __("Running on commit: ") }} {{ git_commit() }}<br></h5>
+			<h5>{{ __("Running on commit: ") }} <a href="https://github.com/squareBracket-and-Finalium/squareBracket/commit/{{ git_commit() }}">{{ git_commit() }}</a><br></h5>
 			<a class="button button-neutral button-small btnAdd" role="button">{{ __("Options") }}</a>
 			<div id="myModal" class="bg-neutral" style="padding:0.3em;">
 
