--- a/templates/sbnext-finalium/upload.twig
+++ b/templates/sbnext-finalium/upload.twig
@@ -13,7 +13,7 @@
 						<h2 style="margin-bottom: 0.5em;">{{ __("Video info") }}</h2>
 						<p>{{ __("Enter the title and description of your video.") }}</p>
 						<h4 style="margin-bottom: 0.5em;">{{ __(" Title") }}</h4>
-						<input type="text" class="form-control form-long uploader-form" name="title">
+						<input type="text" class="form-control form-long uploader-form" id="title" name="title">
 						<br>
 						<h4 style="margin-bottom: 0.5em;">{{ __(" Description") }}</h4>
 						<textarea class="form-control form-long uploader-form" name="desc" maxlength="2000" form="uploadForm"
@@ -23,7 +23,7 @@
 						<input type="text" class="form-control form-long uploader-form" name="tags">
 						<h2 style="margin-bottom: 0.5em;">{{ __("Video file") }}</h2>
 						<p>{{ __("Select the video file you want to upload.") }}</p>
-						<input class="form-control" type="file" name="fileToUpload" id="fileToUpload" required>
+						<input class="form-control" type="file" name="fileToUpload" id="fileToUpload" onchange="$('#title').val($('#fileToUpload').val().split('\\').pop().split('/').pop())" required>
 						<br>
 						<div class="right">
 							<input class="button button-primary" type="submit" id="upload" name="upload" value="{{ __("Upload") }}">
