--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -164,7 +164,7 @@
 				</h3>
 				<div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
 			   {% if log %}
-               <div class="grid">
+               <div class="grid" id="commentField">
                   <div class="col-md-1">
                      <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}">
                   </div>
