--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -1,120 +1,72 @@
 body {
 	font-size: 100%;
 	font: 12px Arial,sans-serif;
-	background: white;
+	background: #eaeaea;
+	background-image: url("/assets/nostalgia/noise.png");
+}
+
+a:link, a:visited, a:active {
+    color: #03c;
 }
 
 .page-container {
 	width: 960px;
-}
-
-#masthead-container {
-	margin: 0 auto 25px;
-	padding: 0;
-	position: relative;
-	display: block;
-	height: 78px;
-	border-bottom: none;
-	width: 100%;
+	background-color: white;
+    margin-top: -2px;
+    padding: 15px 10px;
 }
 
 .header1 {
-	background-color: #0054B6;
-	background: linear-gradient(to bottom, #0054B6 0%,#0A2D7F 100%);
-	height: 58px;
-	a {
-		color: #03c;
-	}
-	.user-info {
-		align-self: flex-start;
-		margin: 0 4px 0 0;
-	}
-	.poktube-slogan {
-		padding: 0 5px; 
-		font-style: italic;
-		color: white;
-	}
-	#logo {
-		height: 34px;
-		width: auto;
-	}
-	#masthead-bar-contents {
-		padding-top: 4px;
-		text-align: right;
-	}
-	.search-form {
-		margin-right: 100px;
-		display: inline;
-	}
-	#masthead-search-terms {
-		height: 25px;
-		widtH: 229px;
-	}
-	.util-item {
-		border-left: 1px solid #000;
-		padding: 0 0 1px 6px;
-		margin-left: 6px;
-		float: left;
-		display: block;
-		color: white;
-	}
-	.util-item.first {
-		border-left: none;
-		padding-left: 1px;
-		margin: 0;
-	}
-	.poktube-search {
-		 color:#e67402; 
-		 font-size: 14px; 
-		 padding: 2px;
-	}
-	.poktube-button {
-		padding: 2px 12px;
-	}
+	margin: 0px auto;
+	padding: 20px 0px 2px 0px;
 }
 
-	#bar {
-		height: 28px;
-		background-position: 0 -487px;
-		border: 1px solid #999;
-		cursor: default;
-		background: linear-gradient(to bottom, #585858 0%, #181818 100%);
-		.nav-item {
-			text-align: center;
-			float: left;
-			text-decoration: none;
-			font-size: 13px;
-			white-space: nowrap;
-			display: block;
-			padding: 6px;
-		}
-		a {
-			color: white;
-		}
-		.nav-item:hover {
-		background: linear-gradient(to bottom, #FFFFFF 60%,#D4D4D4 100%);
-		color: black;
-		}
-		.nav-item:active {
-		background: linear-gradient(to bottom, #D4D4D4 40%,#FFFFFF 100%);
-		color: black;
-		}
-		#upload-button {
-			margin-right: 5px;
-			float: right;
-			padding: 4px 10px;
-		}
-	}
+.header2 {
+	height: 35px;
+	line-height: 0;
+	background-image: url("/assets/nostalgia/subheader.gif");
+	border-radius: 10px 10px 0 0;
+	border-radius: 5px 5px 0 0;
+}
+
+#masthead-content #masthead-upload-button-group, .masthead-user {
+	float: none;
+	margin-top: 0;
+	margin-left: 0;
+	position: relative;
+}
+
+.headertext {
+    color: #fff !important;
+}
+
+.search_input {
+    font: 12px Arial,Helvetica,sans-serif;
+    width: 245px;
+    padding: 2px 4px 3px;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.button-poktube {
+    padding: 3.6px 1em;
+    border: 1px solid #ccc;
+    background: #f6f6f6;
+    background-image: linear-gradient(to bottom, #f6f6f6 0%,#e8e8e8 100%);
+    margin-left: 0px;
+    border-radius: 3px;
+    font: 12px Arial,Helvetica,sans-serif;
+}
 
 .main-content {
- background: white;
- background-size:cover;
- margin:0;
- color:black;
- padding: 25px 0;
- margin-top: 0;
- padding: 0;
- display: block;
+	 background: white;
+	 background-size:cover;
+	 margin:0;
+	 color:black;
+	 padding: 25px 0;
+	 margin-top: 0;
+	 padding: 0;
+	 display: block;
 }
 
 .whatsnew {
