--- a/templates/sbnext-finalium/components/nostalgia/_header.twig
+++ b/templates/sbnext-finalium/components/nostalgia/_header.twig
@@ -1,65 +1,100 @@
-	<div id="masthead-container">
-<table class="header1" width="100%" bgcolor="#0049C7" cellpadding="0" style="padding: 5px 0px 0px 0px;" cellspacing="0" border="0">
-	<tbody><tr valign="top">
-		<td width="130" rowspan="2" style="padding: 0px 5px 5px 5px;vertical-align: middle;"><a href="index.php"><img id="logo" src="/assets/logo-wordmark-masthead-dark.png" alt="squareBracket" border="0"></a></td>
-		<td valign="top" style="vertical-align: middle;">
-		<table align="right" width="100%" cellpadding="0" cellspacing="0" border="0">
-			<tbody><tr valign="top">
-			<td align="left" class="poktube-slogan">Unbelivable, This is not PokTube.</td>
-				<td align="right">
-				<table cellpadding="0" cellspacing="0" border="0">
-					<tbody><tr>
-						<td>			<div id="{% if log %}masthead-loggedin{% else %}masthead-signin{% endif %}" class="user-info">
-				{% if log %}
-					<a class="util-item first" href="/user.php?name={{ userdata.name }}">{{ userdata.title }}</a>
-					<a class="util-item" href="user.php?name={{ userdata.name }}">{{ __("Profile") }}</a>
-					<a class="util-item" href="/studio/">{{ __("Studio") }}</a>
-					<a class="util-item" href="/settings.php">{{ __("Settings") }}</a>
-					<a class="util-item" href="logout.php">{{ __("Log out") }}</a>
-				{% else %}
+<table class="header1" width="960px" cellpadding="0" cellspacing="0" border="0">
+   <tbody>
+      <tr valign="top">
+         <td width="130" rowspan="1" style="padding: 0px 5px 5px 5px;"><a href="index.php"><img src="assets/nostalgia/logo.png" alt="squareBracket" border="0"></a></td>
+         <td valign="top">
+            <table width="40%" align="left" cellpadding="2" cellspacing="0" border="0">
+               <tbody>
+                  <tr>
+                     <form method="GET" action="search.php">
+                     <td>
+                        <input class="search_input" type="text" value="" name="query" size="30" maxlength="128">
+                     </td>
+                     <td>
+                        <input class="button-poktube" type="submit" value="Search">
+                     </td>
+					 </form>
+                  </tr>
+               </tbody>
+            </table>
+            <table style="margin-top: 4px;" align="right" width="50%" cellpadding="0" cellspacing="0" border="0">
+               <tbody>
+                  <tr valign="top">
+                     <td align="right">
+                        <table cellspacing="0" cellpadding="2" border="0">
+                           <tbody>
+                              <tr>
+							  {% if log %}
+                                 <td>			<div id="{% if log %}masthead-loggedin{% else %}masthead-signin{% endif %}" class="masthead-user">
 				<div>
-					<a class="util-item first" href="../login.php">{{ __("Sign in") }}</a>
-					<a class="util-item" href="../register.php">{{ __("Register") }}</a>
+				<b>{{ userdata.title }}</b>
+               <!-- <div {% if notification_count > 0 %}class="bg-danger text-light"{% else %}class="bg-neutral{% endif %}" style="padding:6px 8px;display: inline-block;">{{ notification_count }}</div> -->
+				<div class="usermenushit" id="masthead-below">
+					<ul style="padding:0">
+					<li><a href="user.php?name={{ userdata.name }}">{{ __("Profile") }}</a></li>
+					<li><a href="/studio/">{{ __("Studio") }}</a></li>
+					<li><a href="/settings.php">{{ __("Settings") }}</a></li>
+					<li><a href="logout.php">{{ __("Log out") }}</a></li>
+					</ul>
 				</div>
-				{% endif %}
+				</div>
 			</div></td>
-				
-			</tr>
-		</td>
-		</tr>
-		</tbody></table>
-		</tbody></table>
-		</td>
-	</tr>
-
-		<tr>
-		<td width="100%">
-			<table cellpadding="2" cellspacing="0" border="0">
-				<tbody>
-					<tr>
-						<form method="GET" action="search.php">
-						<td>
-							<input type="text" value="" name="query" size="30" maxlength="128" class="poktube-search">
-						</td>
-						<td>
-							<input class="poktube-button" type="submit" value="Search">
-						</td>
-						</form>
-					</tr> 
-				</tbody>
-			</table>
-		</td>
-	</tr>
-
-			
-</tbody></table>
-			<div id="bar">
-			<a class="nav-item" href="/">Home</a>
-			<a class="nav-item" href="/browse.php">Browse</a>
-			<a class="nav-item" href="/channels.php">Channels</a>
-			<a class="nav-item" href="/forum/">Community</a>
-			<div id="masthead-bar-contents">
-			<a class="button button-primary" id="upload-button" href="/upload_start.php">Upload</a>
-			</div>
-		</div>
-	</div>
+                                 <td style="padding: 0px 5px 0px 5px;">|</td>
+                                 <td><a href="upload.php">{{ __("Upload") }}</a></td>
+                                 <td style="padding: 0px 5px 0px 5px;">|</td>
+                                 <td><a href="logout.php">{{ __("Logout") }}</a></td>
+							  {% else %}
+                                 <td><a href="register.php"><strong>{{ __("Register") }}</strong></a></td>
+                                 <td style="padding: 0px 5px 0px 5px;">|</td>
+                                 <td><a href="login.php">{{ __("Sign In") }}</a></td>
+							  {% endif %}
+                              </tr>
+                           </tbody>
+                        </table>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+         </td>
+      </tr>
+      <tr>
+      </tr>
+   </tbody>
+</table>
+<table class="header2" align="center" width="960px" bgcolor="#3C3C3C" cellpadding="0" cellspacing="0" border="0">
+   <tbody>
+      <tr>
+         <td><img src="img/pixel.gif" width="1" height="5"></td>
+      </tr>
+      <tr>
+         <td><img src="img/pixel.gif" width="5" height="1"></td>
+         <td width="100%">
+            <table width="100%" cellpadding="0" cellspacing="0" border="0">
+               <tbody>
+                  <tr>
+                     <td>
+                        <table cellpadding="2" cellspacing="0" border="0">
+                           <tbody>
+                              <tr>
+                                 <td>&nbsp;<a class="headertext" href="index.php">{{ __("Home") }}</a></td>
+                                 <td>&nbsp;|&nbsp;</td>
+                                 <td><a class="headertext" href="browse.php">{{ __("Videos") }}</a></td>
+                                 <td>&nbsp;|&nbsp;</td>
+                                 <td><a class="headertext" href="users.php">{{ __("Channels") }}</a></td>
+                                 <td>&nbsp;|&nbsp;</td>
+                                 <td><a class="headertext" href="/forum/">{{ __("Forums") }}</a></td>
+                              </tr>
+                           </tbody>
+                        </table>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+         </td>
+         <td><img src="img/pixel.gif" width="5" height="1"></td>
+      </tr>
+      <tr>
+         <td><img src="img/pixel.gif" width="1" height="5"></td>
+      </tr>
+   </tbody>
+</table>
