clean up unused code, fix #7

--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -163,7 +163,7 @@
 			 {{ small_video_box(related_video)}}
 			 {% endfor %}
 			 <div class="center">
-					  <div class="button button-secondary" id="fromUser">
+					  <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
 						{{ __("More videos") }}
 					  </div>
 			</div>
