--- a/templates/sbnext-finalium/components/nostalgia/_header.twig
+++ b/templates/sbnext-finalium/components/nostalgia/_header.twig
@@ -81,6 +81,8 @@
                                  <td><a class="headertext" href="browse.php">{{ __("Videos") }}</a></td>
                                  <td>&nbsp;|&nbsp;</td>
                                  <td><a class="headertext" href="users.php">{{ __("Channels") }}</a></td>
+                                 <td>&nbsp;|&nbsp;</td>
+                                 <td><a class="headertext" href="/forum/">{{ __("Forums") }}</a></td>
                               </tr>
                            </tbody>
                         </table>
