--- a/templates/sbnext-finalium/components/nostalgia/_header.twig
+++ b/templates/sbnext-finalium/components/nostalgia/_header.twig
@@ -76,13 +76,11 @@
                         <table cellpadding="2" cellspacing="0" border="0">
                            <tbody>
                               <tr>
-                                 <td>&nbsp;<a class="headertext" href="index.php">{{ __("Home") }}</a></td>
+                                 <td>&nbsp;<a class="headertext" href="/index.php">{{ __("Home") }}</a></td>
                                  <td>&nbsp;|&nbsp;</td>
-                                 <td><a class="headertext" href="browse.php">{{ __("Videos") }}</a></td>
+                                 <td><a class="headertext" href="/browse.php">{{ __("Videos") }}</a></td>
                                  <td>&nbsp;|&nbsp;</td>
-                                 <td><a class="headertext" href="users.php">{{ __("Channels") }}</a></td>
-                                 <td>&nbsp;|&nbsp;</td>
-                                 <td><a class="headertext" href="/forum/">{{ __("Forums") }}</a></td>
+                                 <td><a class="headertext" href="/channels.php">{{ __("Channels") }}</a></td>
                               </tr>
                            </tbody>
                         </table>
