--- a/templates/sbnext-desktop/components/nostalgia/_header.twig
+++ b/templates/sbnext-desktop/components/nostalgia/_header.twig
@@ -1,7 +1,7 @@
 <table class="header1" width="960px" cellpadding="0" cellspacing="0" border="0">
    <tbody>
       <tr valign="top">
-         <td width="130" rowspan="1" style="padding: 0px 5px 5px 5px;"><a href="index.php"><img src="assets/nostalgia/logo.png" alt="squareBracket" border="0"></a></td>
+         <td width="130" rowspan="1" style="padding: 0px 5px 5px 5px;"><a href="index.php"><img src="/assets/nostalgia/logo.png" alt="squareBracket" border="0"></a></td>
          <td valign="top">
             <table width="40%" align="left" cellpadding="2" cellspacing="0" border="0">
                <tbody>
@@ -76,11 +76,11 @@
                         <table cellpadding="2" cellspacing="0" border="0">
                            <tbody>
                               <tr>
-                                 <td>&nbsp;<a class="headertext" href="index.php">{{ __("Home") }}</a></td>
+                                 <td>&nbsp;<a class="headertext" href="/index.php">{{ __("Home") }}</a></td>
                                  <td>&nbsp;|&nbsp;</td>
-                                 <td><a class="headertext" href="browse.php">{{ __("Videos") }}</a></td>
+                                 <td><a class="headertext" href="/browse.php">{{ __("Videos") }}</a></td>
                                  <td>&nbsp;|&nbsp;</td>
-                                 <td><a class="headertext" href="users.php">{{ __("Channels") }}</a></td>
+                                 <td><a class="headertext" href="/channels.php">{{ __("Channels") }}</a></td>
                               </tr>
                            </tbody>
                         </table>
