clean up some code
wtf? why is there a variable to make it go back to root?

--- a/templates/sbnext-desktop/components/verticalvideobox.twig
+++ b/templates/sbnext-desktop/components/verticalvideobox.twig
@@ -6,7 +6,7 @@
 				</a>
 			</div>
 			<div class="col-md-9 vid-info">
-				<h2 class="title"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h2>
+				<h2 class="title"><a href="/watch.php?v={{ data.video_id }}">{{ data.title }}</a></h2>
 				<span class="stat-larger">{{ __("by") }} {{ userlink(data, 'u_') }}</span>
 				<span class="stat-larger">{{ data.views }} {{ __("views") }}</span>
 				<span class="stat-larger">{{ data.time | relative_time }}</span>
