--- a/templates/sbnext-desktop/watch.twig
+++ b/templates/sbnext-desktop/watch.twig
@@ -129,7 +129,7 @@
 		 </div>
          <div class="card">
             <div class="card-body-fat">
-               <h3>Comments ({{ comCount }})</h3>
+               <h3>{{ __("Comments") }} ({{ comCount }})</h3>
 			   {% if log %}
                <div class="grid" id="commentField">
                   <div class="col-md-1">
